@@ -76,6 +76,7 @@ extern WandExport CompressionType
 extern WandExport const char
   *MagickGetCopyright(void),
   *MagickGetHomeURL(void),
+  *MagickGetImageGeometry(MagickWand *),
   *MagickGetPackageName(void),
   *MagickGetQuantumDepth(unsigned long *),
   *MagickGetReleaseDate(void),
@@ -196,6 +197,7 @@ extern WandExport unsigned int
   MagickGetImageColormapColor(MagickWand *,const unsigned long,PixelWand *),
   MagickGetImageExtrema(MagickWand *,unsigned long *,unsigned long *),
   MagickGetImageGreenPrimary(MagickWand *,double *,double *),
+  MagickGetImageMatte(MagickWand *),
   MagickGetImageMatteColor(MagickWand *,PixelWand *),
   MagickGetImagePage(MagickWand *wand,
     unsigned long *width,unsigned long *height,long *x,long *y),
@@ -274,6 +276,7 @@ extern WandExport unsigned int
   MagickSetImageColorspace(MagickWand *,const ColorspaceType),
   MagickSetImageGreenPrimary(MagickWand *,const double,const double),
   MagickSetImageGamma(MagickWand *,const double),
+  MagickSetImageGeometry(MagickWand *,const char *),
   MagickSetImageGravity(MagickWand *,const GravityType),
   MagickSetImageFilename(MagickWand *,const char *),
   MagickSetImageFormat(MagickWand *wand,const char *format),
@@ -281,6 +284,7 @@ extern WandExport unsigned int
   MagickSetImageIndex(MagickWand *,const long),
   MagickSetImageInterlaceScheme(MagickWand *,const InterlaceType),
   MagickSetImageIterations(MagickWand *,const unsigned long),
+  MagickSetImageMatte(MagickWand *,const unsigned int),
   MagickSetImageMatteColor(MagickWand *,const PixelWand *),
   MagickSetImageOption(MagickWand *,const char *,const char *,const char *),
   MagickSetImagePage(MagickWand *wand,
