@@ -35,6 +35,20 @@
 <div class="document">
 
 
+<p>2014-02-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>wand/magick_wand.c (MagickGetImageGeometry): New function to get
+the image geometry string.  This function and the three others in
+this change set are contributed by Sara Shafaei.
+(MagickGetImageMatte): New function to read the image matte
+(opacity) channel enable flag.
+(MagickSetImageGeometry): New function to set the image geometry
+string.
+(MagickSetImageMatte): New function to set the image matte
+(opacity) channel enable flag.</li>
+</ul>
+</blockquote>
 <p>2014-01-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
