@@ -1,3 +1,15 @@
+2014-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* wand/magick_wand.c (MagickGetImageGeometry): New function to get
+	the image geometry string.  This function and the three others in
+	this change set are contributed by Sara Shafaei.
+	(MagickGetImageMatte): New function to read the image matte
+	(opacity) channel enable flag.
+	(MagickSetImageGeometry): New function to set the image geometry
+	string.
+	(MagickSetImageMatte): New function to set the image matte
+	(opacity) channel enable flag.
+
 2014-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickDrawImage): Remove development debug
